--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -87,7 +87,7 @@
     </section>
 
     <section class="section" id="speakers">
-      <div class="inner">
+      <div class="inner-bt">
         <div class="content">
           <h1>Speakers</h1>
           <div class="row">
@@ -723,18 +723,22 @@
 
 
       <section class="section" id="venue">
-        <div class="inner">
+        <div class="inner-bt">
           <div class="content">
             <h1>Venue</h1>
             <h2>Pocket Play Labs</h2>
 <h3>Bangkok, Thailand</h3>
 
-<div class="map-canvas">
-  <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
+    </div><!-- /content -->
+      </div><!-- /inner -->
+        </section><!-- /section -->
 
-</div>          </div><!-- /content -->
-        </div><!-- /inner -->
-      </section><!-- /section -->
+      <section class="map">
+        <div class="map-canvas">
+          <iframe width="100%" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
+
+        </div>  
+      </section>
 
 
       <div class="section alt" id="sponsors">
