--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -825,7 +825,15 @@
                     <%= f.text_field :last_name, class: 'form-control', placeholder: 'Last Name' %>
                   </div>
                 </div><!-- /row -->
+                <div class="row">
+                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 required">
+                    <%= f.text_field :occupation, class: 'form-control', placeholder: 'Occupation' %>
+                  </div>
 
+                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 required">
+                    <%= f.text_field :phone_number, class: 'form-control', placeholder: 'Phone Number' %>
+                  </div>
+                </div><!-- /row -->
                 <div class="row">
                   <div class="col-lg-12 required">
                     <%= f.text_field :email, class: 'form-control', placeholder: 'Email' %>
