add page 365 logo and speakers

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -72,6 +72,9 @@
         <a href="#">
           <%= image_tag 'samples/logos/platinum/find-your-space.png' %>
         </a>
+        <a href="#">
+          <%= image_tag 'samples/logos/platinum/Page365.png' %>
+        </a>
       </section>
 
 
@@ -118,16 +121,16 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/jan.png' %>
-      <h2>Jan Jones</h2>
-      <div>Oozou</div>
+      <%= image_tag 'samples/constantine.png' %>
+      <h2>Constantin Hofstetter</h2>
+      <div>Senior Developer, Oozou</div>
     </div>
   </div>
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
       <%= image_tag 'samples/avatar-4.jpg' %>
-      <h2>Robin C</h2>
+      <h2>Robin Clart</h2>
       <div>CTO Omise</div>
     </div>
   </div>
@@ -247,7 +250,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-       <%= image_tag 'samples/jan.png' %>
+       <%= image_tag 'samples/constantine.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -256,8 +259,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">19:15 PM</div>
-        <h4>Jan Jones <span>Oozou</span></h4>
-        <p>Topic: <span>How I solved the P VS NP problem in less than thirty minutes using Ruby.</span></p>
+        <h4>Constantin Hofstette <span>Senior Developer, Oozou</span></h4>
+        <p><span>Website Performance and Optimization in Rails.</span></p>
         <p class="summary">
           Oozou is a Bangkoks leading development house and focuses largely on Rails and iOS. <br>
           Oozou works primaraly with customers overseas, but have some domestic clients as well.
@@ -273,7 +276,7 @@
         <%= image_tag 'samples/lunch.jpg' %>
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="time">19:30 PM</div>
+        <div class="time">19:45 PM</div>
         <h4>Quick Break</h4>
       </div>
     </div>
@@ -291,7 +294,7 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">19:45 PM</div>
+        <div class="time">20:00 PM</div>
         <h4>Robin Clart <span>CTO Omise</span></h4>
         <p><span>TBA</span></p>
         <p class="summary">
@@ -312,7 +315,7 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">19:45 PM</div>
+        <div class="time">20:15 PM</div>
         <h4>TBA <span>AWS</span></h4>
         <p><span>TBA</span></p>
         <p class="summary">
@@ -334,7 +337,7 @@
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
-        <div class="time">20:15 PM</div>
+        <div class="time">20:30 PM</div>
         <h4>Wittawas "Start" Wisarnkanchana <span>Senior Developer Uteeni</span></h4>
         <p><span>PHP Design Patterns in Real World</span></p>
         <p class="summary">
