add styles for text formatting

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -138,9 +138,9 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-5.jpg' %>
-      <h2>AWS</h2>
-      <div>TBA</div>
+      <%= image_tag 'samples/omar.png' %>
+      <h2>Omar Khan</h2>
+      <div>Senior Back-end Developer, PocketPlay Labs</div>
     </div>
   </div>
 
@@ -195,6 +195,30 @@
     </div>
   </div><!-- /tentative -->
 
+  <div class="tentative">
+    <div class="row">
+      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
+        <%= image_tag 'samples/zack.png' %>
+      </div>
+      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
+        <div class="social">
+          <a href="#"><i class="fa fa-facebook-square"></i></a>
+          <a href="#"><i class="fa fa-twitter-square"></i></a>
+          <a href="#"><i class="fa fa-google-plus-square"></i></a>
+        </div>
+        <div class="time">18:45 AM</div>
+        <h4>Sakchai "Zack" Siripanyawuth <span>Codemy / CTO Uteeni</span></h4>
+        <p><span>
+          Building your first Rails app
+        </span></p>
+        <p class="summary">
+          Zack does tech training and is training developers from scratch or 
+          any other level to become fluent <br> in the ROR framework and many of his former
+          studens now run sucessfull startups.
+        </p>
+      </div>
+    </div>
+  </div><!-- /tentative -->
 
   <div class="tentative">
     <div class="row">
@@ -218,34 +242,6 @@
       </div>
     </div>
   </div><!-- /tentative -->
-
-
-  <div class="tentative">
-    <div class="row">
-      <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/zack.png' %>
-      </div>
-      <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
-          <a href="#"><i class="fa fa-facebook-square"></i></a>
-          <a href="#"><i class="fa fa-twitter-square"></i></a>
-          <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
-        <div class="time">18:45 AM</div>
-        <h4>Sakchai "Zack" Siripanyawuth <span>Codemy / CTO Uteeni</span></h4>
-        <p><span>
-          Build and deploy and deploy and app using Vagrant and Docker.
-          Vagrant & Docker = DevEnv FTW
-        </span></p>
-        <p class="summary">
-          Zack does tech training and is training developers from scratch or 
-          any other level to become fluent <br> in the ROR framework and many of his former
-          studens now run sucessfull startups.
-        </p>
-      </div>
-    </div>
-  </div><!-- /tentative -->
-
 
   <div class="tentative">
     <div class="row">
