Add Robin C avatar

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -123,14 +123,6 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/start.png' %>
-      <h2>Wittawas "Start" Wisarnkanchana</h2>
-      <div>Designer Wall Inc.</div>
-    </div>
-  </div>
-
-  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-    <div class="speaker">
       <%= image_tag 'samples/zack.png' %>
       <h2>Sakchai "Zack" Siripanyawuth</h2>
       <div>Codemy / CTO Uteeni</div>
@@ -147,7 +139,7 @@
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
-      <%= image_tag 'samples/avatar-4.jpg' %>
+      <%= image_tag 'samples/robin.png' %>
       <h2>Robin Clart</h2>
       <div>CTO Omise</div>
     </div>
@@ -300,7 +292,7 @@
   <div class="tentative">
     <div class="row">
       <div class="image col-lg-2 col-md-2 col-sm-2 col-xs-3">
-        <%= image_tag 'samples/avatar-4.jpg' %>
+        <%= image_tag 'samples/robin.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="social">
@@ -355,6 +347,9 @@
 
 </div><!-- /schedule -->    </div>
 
+
+<!-- Second conference -->
+
     <div class="item">
       <h2 class="schedule-day">20th of June, 2015</h2>
 <div class="schedule">
@@ -384,8 +379,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">10.00 AM</div>
-        <h4>Stephanie Sims <span>BlackHat Linux Inc.</span></h4>
-        <p>Topic: <span>Securing your Linux Server</span></p>
+        <h4>TBA <span>BlackHat Linux Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -404,8 +399,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">11.00 AM</div>
-        <h4>David Blane <span>Open Source Fanatics</span></h4>
-        <p>Topic: <span>Social Platform for Enterprise</span></p>
+        <h4>TBA <span>Open Source Fanatics</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -424,8 +419,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">12.00 AM</div>
-        <h4>Jason Woods <span>Designer Wall Inc.</span></h4>
-        <p>Topic: <span>Designing for Human</span></p>
+        <h4>TBA <span>Designer Wall Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -439,7 +434,7 @@
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">01.00 PM</div>
-        <h4>Lunch Break</h4>
+        <h4>TBA</h4>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -457,8 +452,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">02.00 PM</div>
-        <h4>Lynda Elric <span>Smashing the Wall</span></h4>
-        <p>Topic: <span>PSR Huh?</span></p>
+        <h4>TBA <span>Smashing the Wall</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -477,8 +472,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">03.00 PM</div>
-        <h4>Rick Taylor <span>Breaking the Habits Inc.</span></h4>
-        <p>Topic: <span>PHP Design Patterns in Real World</span></p>
+        <h4>TBA <span>Breaking the Habits Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -497,8 +492,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">04.00 PM</div>
-        <h4>Anna Buggati <span>Positive Design Inc.</span></h4>
-        <p>Topic: <span>Javascript: Beyond the Basics</span></p>
+        <h4>TBA <span>Positive Design Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -512,7 +507,7 @@
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">05.00 PM</div>
-        <h4>Coffee Break</h4>
+        <h4>TBA</h4>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -530,8 +525,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">05.30 PM</div>
-        <h4>David Lim <span>Source Code Inc.</span></h4>
-        <p>Topic: <span>Deploy Secured Web Server with CloudStack</span></p>
+        <h4>TBA <span>Source Code Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -551,7 +546,7 @@
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">09.00 AM</div>
-        <h4>Opening Ceremony</h4>
+        <h4>TBA</h4>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -569,8 +564,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">10.00 AM</div>
-        <h4>Stephanie Sims <span>BlackHat Linux Inc.</span></h4>
-        <p>Topic: <span>Securing your Linux Server</span></p>
+        <h4>TBA <span>BlackHat Linux Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -589,8 +584,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">11.00 AM</div>
-        <h4>David Blane <span>Open Source Fanatics</span></h4>
-        <p>Topic: <span>Social Platform for Enterprise</span></p>
+        <h4>TBA <span>Open Source Fanatics</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -609,8 +604,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">12.00 AM</div>
-        <h4>Jason Woods <span>Designer Wall Inc.</span></h4>
-        <p>Topic: <span>Designing for Human</span></p>
+        <h4>TBA <span>Designer Wall Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -624,7 +619,7 @@
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">01.00 PM</div>
-        <h4>Lunch Break</h4>
+        <h4>TBA</h4>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -642,8 +637,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">02.00 PM</div>
-        <h4>Lynda Elric <span>Smashing the Wall</span></h4>
-        <p>Topic: <span>PSR Huh?</span></p>
+        <h4>TBA <span>Smashing the Wall</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -662,8 +657,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">03.00 PM</div>
-        <h4>Rick Taylor <span>Breaking the Habits Inc.</span></h4>
-        <p>Topic: <span>PHP Design Patterns in Real World</span></p>
+        <h4>TBA <span>Breaking the Habits Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -682,8 +677,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">04.00 PM</div>
-        <h4>Anna Buggati <span>Positive Design Inc.</span></h4>
-        <p>Topic: <span>Javascript: Beyond the Basics</span></p>
+        <h4>TBA <span>Positive Design Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
@@ -697,7 +692,7 @@
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">05.00 PM</div>
-        <h4>Coffee Break</h4>
+        <h4>TBA</h4>
       </div>
     </div>
   </div><!-- /tentative -->
@@ -715,8 +710,8 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div>
         <div class="time">05.30 PM</div>
-        <h4>David Lim <span>Source Code Inc.</span></h4>
-        <p>Topic: <span>Deploy Secured Web Server with CloudStack</span></p>
+        <h4>TBA <span>Source Code Inc.</span></h4>
+        <p>Topic: <span></span><p>
         <p class="summary">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
       </div>
     </div>
