--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -340,7 +340,9 @@
       </div>
       <div class="title col-lg-10 col-md-10 col-sm-10 col-xs-9">
         <div class="time">20:30 PM</div>
-        <p><span>Networking</span></p>
+        <h4>
+          Networking
+        </h4>
       </div>
     </div>
   </div><!-- /tentative -->
