--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -93,6 +93,7 @@
         <%= link_to 'http://www.findyourspace.co/' do %>
           <%= image_tag 'samples/logos/platinum/find-your-space.png' %>
         <% end %>
+
       </section>
 
 
@@ -112,6 +113,15 @@
         <div class="content">
           <h1>Speakers</h1>
           <div class="row">
+
+
+  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+    <div class="speaker">
+      <%= image_tag 'samples/ben.png' %>
+      <h2>Benjamin Fauchald</h2>
+      <div>Uteeni</div>
+    </div>
+  </div>
 
   <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
     <div class="speaker">
@@ -211,11 +221,11 @@
         <%= image_tag 'samples/zack.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">18:45 AM</div>
         <h4>Sakchai "Zack" Siripanyawuth <span>Codemy / CTO Uteeni</span></h4>
         <p><span>
@@ -236,11 +246,11 @@
         <%= image_tag 'samples/pop.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">18:30 PM</div>
         <h4>Prathan "POP" Thananart <span>Page365</span></h4>
         <p><span>Pop will show you how his team evolved a Ruby on Rails stack that 
@@ -259,11 +269,11 @@
        <%= image_tag 'samples/constantine.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">19:15 PM</div>
         <h4>Constantin Hofstette <span>Senior Developer, Oozou</span></h4>
         <p><span>Website Performance and Optimization in Rails.</span></p>
@@ -295,11 +305,11 @@
         <%= image_tag 'samples/robin.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">20:00 PM</div>
         <h4>Robin Clart <span>CTO Omise</span></h4>
         <p><span>TBA</span></p>
@@ -316,11 +326,11 @@
         <%= image_tag 'samples/omar.png' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">20:15 PM</div>
         <h4>Omar Khan <span>Senior Back-end Developer/PocketPlay Labs</span></h4>
         <p><span>Microservices with Rails</span></p>
@@ -375,11 +385,11 @@
         <%= image_tag 'samples/avatar-3.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">10.00 AM</div>
         <h4>TBA <span>BlackHat Linux Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -395,11 +405,11 @@
         <%= image_tag 'samples/avatar-4.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">11.00 AM</div>
         <h4>TBA <span>Open Source Fanatics</span></h4>
         <p>Topic: <span></span><p>
@@ -415,11 +425,11 @@
         <%= image_tag 'samples/avatar-5.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">12.00 AM</div>
         <h4>TBA <span>Designer Wall Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -448,11 +458,11 @@
        <%= image_tag 'samples/avatar-6.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">02.00 PM</div>
         <h4>TBA <span>Smashing the Wall</span></h4>
         <p>Topic: <span></span><p>
@@ -468,11 +478,11 @@
         <%= image_tag 'samples/avatar-7.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">03.00 PM</div>
         <h4>TBA <span>Breaking the Habits Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -488,11 +498,11 @@
         <%= image_tag 'samples/avatar-8.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">04.00 PM</div>
         <h4>TBA <span>Positive Design Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -521,11 +531,11 @@
         <%= image_tag 'samples/avatar-9.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">05.30 PM</div>
         <h4>TBA <span>Source Code Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -560,11 +570,11 @@
         <%= image_tag 'samples/avatar-3.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">10.00 AM</div>
         <h4>TBA <span>BlackHat Linux Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -580,11 +590,11 @@
         <%= image_tag 'samples/avatar-4.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">11.00 AM</div>
         <h4>TBA <span>Open Source Fanatics</span></h4>
         <p>Topic: <span></span><p>
@@ -600,11 +610,11 @@
         <%= image_tag 'samples/avatar-5.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">12.00 AM</div>
         <h4>TBA <span>Designer Wall Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -633,11 +643,11 @@
         <%= image_tag 'samples/avatar-6.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">02.00 PM</div>
         <h4>TBA <span>Smashing the Wall</span></h4>
         <p>Topic: <span></span><p>
@@ -653,11 +663,11 @@
         <%= image_tag 'samples/avatar-7.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">03.00 PM</div>
         <h4>TBA <span>Breaking the Habits Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -673,11 +683,11 @@
         <%= image_tag 'samples/avatar-8.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">04.00 PM</div>
         <h4>TBA <span>Positive Design Inc.</span></h4>
         <p>Topic: <span></span><p>
@@ -706,11 +716,11 @@
         <%= image_tag 'samples/avatar-9.jpg' %>
       </div>
       <div class="title track col-lg-10 col-md-10 col-sm-10 col-xs-9">
-        <div class="social">
+        <!-- <div class="social">
           <a href="#"><i class="fa fa-facebook-square"></i></a>
           <a href="#"><i class="fa fa-twitter-square"></i></a>
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
-        </div>
+        </div> -->
         <div class="time">05.30 PM</div>
         <h4>TBA <span>Source Code Inc.</span></h4>
         <p>Topic: <span></span><p>
