--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -177,9 +177,9 @@
   <div>
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li class="active" data-target="#event-schedule" data-slide-to="0">Conference 1</li>
-        <li data-target="#event-schedule" data-slide-to="1">Conference 2</li>
-        <li data-target="#event-schedule" data-slide-to="2">Conference 3</li>
+        <li class="active" data-target="#event-schedule" data-slide-to="0">20th of May</li>
+        <li data-target="#event-schedule" data-slide-to="1">24th of June</li>
+        <li data-target="#event-schedule" data-slide-to="2">22nd of July</li>
       </ol>
   </div>
 
@@ -363,7 +363,7 @@
 <!-- Second conference -->
 
     <div class="item">
-      <h2 class="schedule-day">20th of June, 2015</h2>
+      <h2 class="schedule-day">24th of June, 2015</h2>
 <div class="schedule">
 
   <div class="tentative">
@@ -548,7 +548,7 @@
 </div><!-- /schedule -->    </div>
 
     <div class="item">
-      <h2 class="schedule-day">TBA</h2>
+      <h2 class="schedule-day">22nd of July</h2>
 <div class="schedule">
 
   <div class="tentative">
