Change size of e27 logo

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -83,7 +83,7 @@
         <% end %>
 
         <%= link_to 'http://www.e27.co' do %>
-          <%= image_tag 'samples/logos/platinum/e27.png' %>
+          <%= image_tag 'samples/logos/platinum/e27.png', :style => "height: 60px" %>
         <% end %>
 
         <%= link_to 'http://www.github.com' do %>
