--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -48,6 +48,11 @@
         <%# @images.each do |image| %>
          <%#= image_tag "samples/logos/platinum/#{File.basename(path)}" %>
         <%# end %>
+        
+        <h3>
+          Platinum
+        </h3>
+        <hr>
 
         <%= link_to 'http://www.uteeni.com' do %>
           <%= image_tag 'samples/logos/platinum/uteeni.png', :style => "height: 120px" %>
@@ -55,15 +60,6 @@
 
         <%= link_to 'https://www.omise.co' do %>
           <%= image_tag 'samples/logos/platinum/omise.png', :style => "height: 70px" %>
-        <% end %>
-
-
-        <%= link_to 'https://www.page365.net' do %>
-          <%= image_tag 'samples/logos/platinum/Page365.png', :style => "height: 60px" %>
-        <% end %>
-
-        <%= link_to 'https://aws.amazon.com' do %>
-          <%= image_tag 'samples/logos/platinum/amazonWS.png' %>
         <% end %>
 
         <%= link_to 'http://www.playlab.com' do %>
@@ -77,6 +73,15 @@
         <%= link_to 'http://hubbathailand.com' do %>
           <%= image_tag 'samples/logos/platinum/hubba.png' %>
         <% end %>
+
+        <%= link_to 'http://angel.co' do %>
+          <%= image_tag 'samples/logos/platinum/angellist.png', :style => "height: 50px" %>
+        <% end %>
+
+        <h3 style="margin-bottom: 12px;">
+          Gold
+        </h3>
+        <hr style="margin-bottom: 12px">
 
         <%= link_to 'https://www.techinasia.com' do %>
           <%= image_tag 'samples/logos/platinum/tech.png', :style => "height: 60px"  %>
@@ -93,6 +98,32 @@
         <%= link_to 'http://www.findyourspace.co/' do %>
           <%= image_tag 'samples/logos/platinum/find-your-space.png' %>
         <% end %>
+
+        <%= link_to 'https://aws.amazon.com' do %>
+          <%= image_tag 'samples/logos/platinum/amazonWS.png' %>
+        <% end %>
+
+        <%= link_to 'https://www.page365.net' do %>
+          <%= image_tag 'samples/logos/platinum/Page365.png', :style => "height: 60px" %>
+        <% end %>
+
+        <h3 style="margin-bottom: 12px;">
+          Silver
+        </h3>
+        <hr>
+
+        <%= link_to 'http://nimbl3.com' do %>
+          <%= image_tag 'samples/logos/platinum/nimble.png', :style => "height: 40px" %>
+        <% end %>
+
+        <%= link_to 'https://www.facebook.com/DrinkentrepreneurBangkok' do %>
+          <%= image_tag 'samples/logos/platinum/drink.png', :style => "height: 120px" %>
+        <% end %>
+
+        <%= link_to 'http://getlinks.co' do %>
+          <%= image_tag 'samples/logos/platinum/links.png', :style => "height: 100px" %>
+        <% end %>
+
 
       </section>
 
@@ -275,7 +306,7 @@
           <a href="#"><i class="fa fa-google-plus-square"></i></a>
         </div> -->
         <div class="time">19:15 PM</div>
-        <h4>Constantin Hofstette <span>Senior Developer, Oozou</span></h4>
+        <h4>Constantin Hofstetter<span>Senior Developer, Oozou</span></h4>
         <p><span>Website Performance and Optimization in Rails.</span></p>
         <p class="summary">
           Oozou is a Bangkoks leading development house and focuses largely on Rails and iOS. <br>
@@ -751,7 +782,6 @@
       <section class="map">
         <div class="map-canvas">
           <iframe width="100%" height="650" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=Bangkok%2BPocket%2BPlay%2BLabs&ie=UTF8&z=15&t=m&iwloc=near&output=embed"></iframe>
-
         </div>  
       </section>
 
