Add sponsors text

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -50,7 +50,7 @@
         <%# end %>
         
         <h3>
-          Platinum
+          Platinum Sponsors
         </h3>
         <hr>
 
@@ -79,7 +79,7 @@
         <% end %>
 
         <h3 style="margin-bottom: 12px;">
-          Gold
+          Gold Sponsors
         </h3>
         <hr style="margin-bottom: 12px">
 
@@ -108,7 +108,7 @@
         <% end %>
 
         <h3 style="margin-bottom: 12px;">
-          Silver
+          Silver Sponsors
         </h3>
         <hr>
 
