--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -107,12 +107,14 @@
           <%= image_tag 'samples/logos/platinum/Page365.png', :style => "height: 60px" %>
         <% end %>
 
+
+
         <h3 style="margin-bottom: 12px;">
           Silver Sponsors
         </h3>
         <hr>
 
-        <%= link_to 'http://nimbl3.com' do %>
+        <%= link_to 'https://github.com/nimbl3/our-team/tree/master/openings' do %>
           <%= image_tag 'samples/logos/platinum/nimble.png', :style => "height: 40px" %>
         <% end %>
 
@@ -343,7 +345,7 @@
         </div> -->
         <div class="time">20:00 PM</div>
         <h4>Robin Clart <span>CTO Omise</span></h4>
-        <p><span>TBA</span></p>
+        <p><span>How to control high transaction volumes</span></p>
         <p class="summary">
           Omise is "the Stripe of Asia", solving the one of the biggest challanges for ecommerce in Soth East Asia, payments. <br> Just a few days ago Omise got its series A round going and we are so lucky to have the CTO here talking about Ruby and scalability.
         </p>
